gcc/testsuite/rust/compile/mod_in_types_ns.rs
mod foo {
    mod bar {}

    struct bar; // { dg-error "defined multiple times" }
}
